--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    <h1>AluraBooks</h1>
+    <header class="cabeçalho">
+        <span class="cabeçalho_meu-hamburguer"></span>
+        <img src="Logo.svg" alt="Logo do AluraBooks"
+    </header>
 </body>
 </html>
