--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="cabeçalho">
         <span class="cabeçalho_meu-hamburguer"></span>
-        <img src="Logo.svg" alt="Logo do AluraBooks"
+        <img src="Logo.svg" alt="Logo do AluraBooks">
     </header>
 </body>
 </html>
