--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <header class="cabeçalho">
         <span class="cabeçalho_meu-hamburguer"></span>
         <img src="Logo.svg" alt="Logo do AluraBooks">
+        <a href="#"><img src="Favoritos.svg" alt="Meus favoritos"></a>
+        <a href="#"><img src="Compras.svg" alt="Carrinho de compra"></a>
+        <a href="#"><img src="Usuario.svg" alt="Meu perfil"></a>
     </header>
 </body>
 </html>
