--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <header class="cabeçalho">
+        <div class="container">
         <span class="cabeçalho_meu-hamburguer"></span>
         <img src="Logo.svg" alt="Logo do AluraBooks">
+    </div>
         <a href="#"><img src="Favoritos.svg" alt="Meus favoritos"></a>
         <a href="#"><img src="Compras.svg" alt="Carrinho de compra"></a>
         <a href="#"><img src="Usuario.svg" alt="Meu perfil"></a>
