--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <span class="cabeçalho_meu-hamburguer"></span>
         <img src="Logo.svg" alt="Logo do AluraBooks">
     </div>
+    <div class="container">
         <a href="#"><img src="Favoritos.svg" alt="Meus favoritos"></a>
         <a href="#"><img src="Compras.svg" alt="Carrinho de compra"></a>
         <a href="#"><img src="Usuario.svg" alt="Meu perfil"></a>
+    </div>
     </header>
 </body>
 </html>
