--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="cabeçalho">
         <div class="container">
-        <span class="cabeçalho_meu-hamburguer"></span>
+        <span class="cabeçalho_meu-hamburguer container_imagem"></span>
         <img src="Logo.svg" alt="Logo do AluraBooks">
     </div>
     <div class="container">
