--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 <body>
     <header class="cabeçalho">
         <div class="container">
+        <input type="checkbox" id="menu" class="container_botao">
+        <label for="menu">
+            <span class="cabeçalho_meu-hamburguer container_imagem"></span>
+        </label>
+        <ul>
+            <li class="lista-menu_titulo">Categorias</li>
+            <li class="lista-menu_item"> <a href="#" class="lista-menu_link">Programação</a></li>
+            <li class="lista-menu_item"> <a href="#" class="lista-menu_link">Front-end</a></li></li>
+            <li class="lista-menu_item"> <a href="#" class="lista-menu_link">Infraestrutura</a></li></li>
+            <li class="lista-menu_item"> <a href="#" class="lista-menu_link">Business</a></li></li>
+            <li class="lista-menu_item"> <a href="#" class="lista-menu_link">Desing e UX</a></li></li>
+        </ul>
         <span class="cabeçalho_meu-hamburguer container_imagem"></span>
         <img src="Logo.svg" alt="Logo do AluraBooks">
     </div>
